avoid having too much whitespace and scrolling on the screenshots index

--- a/css/pgadmin-base.css
+++ b/css/pgadmin-base.css
@@ -300,3 +300,9 @@ a.pgaMainMenuSelection:hover
   color: #009ace;
 }
 
+.pgaScreenShotBox
+{
+  width: 300px;
+  height: 300px;
+  float: left;
+}
